# VideoCall

./: build.gradle
app/: build.gradle
app/src/androidTest/java/com/example/gcx/testffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ggh/video/: MainActivity.java  VideoTalkActivity.java
app/src/main/java/com/ggh/video/binder/: FrameProvider.java
app/src/main/java/com/ggh/video/decode/: AndroidHradwareDecode.java  AudioDecoder.java
app/src/main/java/com/ggh/video/device/: AudioRecorder.java  CameraConfig.java  CameraManager.java
app/src/main/java/com/ggh/video/encode/: AudioEncoder.java
app/src/main/java/com/ggh/video/net/: AudioPlayer.java
app/src/main/java/com/ggh/video/net/udp/: NettyClient.java  NettyReceiverHandler.java
app/src/main/java/com/ggh/video/utils/: MyConstants.java  MyUtils.java  ProcessWithThreadPool.java
app/src/main/res/layout/: activity_main.xml  activity_talk.xml
app/src/test/java/com/example/gcx/testffmpeg/: ExampleUnitTest.java
ffmpeglib/: CMakeLists.txt  build.gradle  local.properties
ffmpeglib/src/main/cpp/: android_native_window.cpp  android_native_window.h  com_vonchenchen_android_video_demos_codec_CodecWrapper.cpp  com_vonchenchen_android_video_demos_codec_CodecWrapper.h  decoder.cpp  decoder.h  log.h  yuv_2_rgb.cpp  yuv_2_rgb.h
ffmpeglib/src/main/java/com/vonchenchen/android_video_demos/codec/: CodecWrapper.java  FFmpegDecodeFrame.java
gradle/wrapper/: gradle-wrapper.properties
x264encoder/: CMakeLists.txt  build.gradle  local.properties
x264encoder/src/main/cpp/: PUX264Encoder.cpp  example_sszpf_x264_JNI.cpp  example_sszpf_x264_JNI.h  x264encoder.cpp  x264encoder.h
x264encoder/src/main/java/example/sszpf/x264/: x264sdk.java
